# NPU-Model-Loader-for-AMD

./: LICENSE  README.md  download_deps.bat  original-info-signature.txt  original-model-signature.txt  vaip_config.json
examples/: nodejs_streaming.js  python_streaming.py
npu_chat/: CMakeLists.txt  main.cpp
npu_chat/include/: ort_genai.h  ort_genai_c.h
